--- a/theme/boost/style/moodle.css
+++ b/theme/boost/style/moodle.css
@@ -15489,6 +15489,7 @@ textarea.form-control {
   font-weight: 400;
   color: #1d2125;
   text-align: center;
+  white-space: nowrap;
   vertical-align: middle;
   user-select: none;
   background-color: transparent;
